# aws-vpc-prefix-list-updater

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  dockerfile
.github/: FUNDING.yml  docker-image.yml
src/: main.rs
