[package]
name = "aws-vpc-prefix-list-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.85"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = "0.12"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"